--- a/templates/srfsh.xml.j2
+++ b/templates/srfsh.xml.j2
@@ -6,7 +6,7 @@
   <username>opensrf</username>
   <passwd>{{ opensrf_ejabberd_private_users.opensrf.password }}</passwd>
   <port>5222</port>
-  <logfile>{{ evergreen_install_prefix }}/var/log/srfsh.log</logfile>
+  <logfile>{{ opensrf_install_prefix }}/var/log/srfsh.log</logfile>
   <loglevel>4</loglevel>
   <client>true</client>
 </srfsh>
