enable legacy auth

--- a/templates/ejabberd.yml.j2
+++ b/templates/ejabberd.yml.j2
@@ -793,7 +793,7 @@ modules:
   ##   Non-SASL Authentication (XEP-0078) is now disabled by default
   ##   because it's obsoleted and is used mostly by abandoned
   ##   client software
-  ## mod_legacy_auth: {}
+  mod_legacy_auth: {}
   ##   The module for S2S dialback (XEP-0220). Please note that you cannot
   ##   rely solely on dialback if you want to federate with other servers,
   ##   because a lot of servers have dialback disabled and instead rely on
