--- a/templates/opensrf_core.xml.j2
+++ b/templates/opensrf_core.xml.j2
@@ -1,196 +1,181 @@
 <?xml version="1.0"?>
 <!-- 
-Example OpenSRF bootstrap configuration file for Evergreen
+vim:et:ts=2:sw=2:
 -->
 <config>
-  <!-- Options for <loglevel>: 0 None, 1 Error, 2 Warning, 3 Info, 4 debug -->
+
+  <!-- bootstrap config for OpenSRF apps -->
   <opensrf>
+
     <routers>
 
       <!-- define the list of routers our services will register with -->
+
       <router>
-        <!-- 
-          This is the public router.  On this router, we only register
-          applications which should be accessible to everyone on the OpenSRF
-          network
-        -->
+
+        <!-- This is the public router.  On this router, we only register applications
+             which should be accessible to everyone on the opensrf network -->
         <name>router</name>
         <domain>public.{{ inventory_hostname }}</domain>
-
         <services>
-          <service>opensrf.math</service>
-          <service>open-ils.actor</service>
-          <service>open-ils.acq</service>
-          <service>open-ils.auth</service>
-          <service>open-ils.auth_proxy</service>
-          <service>open-ils.booking</service>
-          <service>open-ils.cat</service>
-          <service>open-ils.circ</service>
-          <service>open-ils.collections</service>
-          <service>open-ils.fielder</service>
-          <service>open-ils.pcrud</service>
-          <service>open-ils.permacrud</service>
-          <service>open-ils.reporter</service>
-          <service>open-ils.resolver</service>
-          <service>open-ils.search</service>
-          <service>open-ils.supercat</service>
-          <service>open-ils.url_verify</service>
-          <service>open-ils.vandelay</service>
-          <service>open-ils.serial</service>
-          <service>open-ils.ebook_api</service>
+            <service>opensrf.math</service> 
         </services>
       </router>
 
       <router>
-        <!--
-          This is the private router.  All applications must register with 
-          this router, so no explicit <services> section is required
-        -->
+        <!-- This is the private router.  All applications must register with 
+            this router, so no explicit <services> section is required -->
         <name>router</name>
         <domain>private.{{ inventory_hostname }}</domain>
       </router>
     </routers>
 
-    <!-- Our domain should match that of the private router -->
+
+    <!-- Jabber login settings
+        Our domain should match that of the private router -->
     <domain>private.{{ inventory_hostname }}</domain>
     <username>opensrf</username>
     <passwd>{{ opensrf_ejabberd_private_users.opensrf.password }}</passwd>
     <port>5222</port>
-
-    <!-- 
-      Name of the router used on our private domain.  
-      This should match one of the <name> of the private router above.
-     -->
+    <!-- name of the router used on our private domain.  
+        this should match one of the <name> of the private router above -->
     <router_name>router</router_name>
 
+    <!-- Log a warning when an outbound message reaches this size in bytes -->
+    <msg_size_warn>1800000</msg_size_warn>
+
+    <!-- log file settings ======================================  -->
+    <!-- log to a local file -->
     <logfile>{{ opensrf_install_prefix }}/var/log/osrfsys.log</logfile>
+
+    <!-- Log to syslog. You can use this same layout for 
+        defining the logging of all services in this file -->
     <!--
-      <logfile>syslog</logfile>
-      <syslog>local0</syslog>
-      <actlog>local1</actlog>
-     -->
+    <logfile>syslog</logfile>
+    <syslog>local2</syslog>
+    <actlog>local1</actlog>
+    -->
+    <!-- Optional log tag.  You can use this to help distinguish
+         syslog entries when running multiple OpenSRF stacks on the
+         same server. -->
+    <!--
+    <logtag>instance1</logtag>
+    -->
+
+    <!-- 0 None, 1 Error, 2 Warning, 3 Info, 4 debug, 5 Internal (Nasty) -->
     <loglevel>3</loglevel>
+
+    <!-- Maximum log message length; if using syslog, you might need to adjust
+         your syslog service's configuration to match longer message lengths -->
+    <loglength>1536</loglength>
+
+    <!-- config file for the services -->
     <settings_config>{{ opensrf_install_prefix }}/conf/opensrf.xml</settings_config>
+
   </opensrf>
-  <!-- 
-    The section between <gateway>...</gateway> is a standard OpenSRF C
-    stack configuration file
-  -->
+
+  <!-- The section between <gateway>...</gateway> is a standard OpenSRF C stack config file -->
   <gateway>
+
+    <!--
+    we consider ourselves to be the "originating" client for requests,
+    which means we define the log XID string for log traces
+    -->
     <client>true</client>
+
+    <!--  the routers's name on the network -->
     <router_name>router</router_name>
-
-    <!-- The gateway connects to the public domain for security -->
-    <domain>public.{{ inventory_hostname }}</domain>
-
-    <!-- This section will be soon deprecated for multi-domain mode... -->
-    <services>
-      <service>opensrf.math</service>
-      <service>opensrf.dbmath</service>
-      <service>open-ils.cat</service>
-      <service>open-ils.search</service>
-      <service>open-ils.circ</service>
-      <service>open-ils.actor</service>
-      <service>open-ils.auth</service>
-      <service>open-ils.auth_proxy</service>
-      <service>open-ils.collections</service>
-      <service>open-ils.reporter</service>
-    </services>
 
     <!-- jabber login info -->
+    <!-- The gateway connects to the public domain -->
+    <domain>public.{{ inventory_hostname }}</domain>
     <username>opensrf</username>
     <passwd>{{ opensrf_ejabberd_public_users.opensrf.password }}</passwd>
     <port>5222</port>
-    <loglevel>3</loglevel>
     <logfile>{{ opensrf_install_prefix }}/var/log/gateway.log</logfile>
-    <!--
-      <logfile>syslog</logfile>
-      <syslog>local6</syslog>
-      <actlog>local1</actlog>
-    -->
+    <loglevel>3</loglevel>
+
+    <!-- cross origin HTTP settings http://en.wikipedia.org/wiki/Cross-origin_resource_sharing -->
+    <cross_origin>
+        <!-- specify individual hosts -->
+        <!-- <origin>example.com</origin> -->
+        <!-- ...or use the * wildcard to match all -->
+        <!-- <origin>*</origin> -->
+    </cross_origin>
+
   </gateway>
-  <!-- ======================================================================================== -->
-  <routers>
-    <router>
-      <!-- public router -->
-      <trusted_domains>
-        <!-- 
-          Allow private services to register with this router 
-          and public client to send requests to this router. 
-        -->
-        <server>private.{{ inventory_hostname }}</server>
 
-        <!-- 
-          Also allow private clients to send to the router so it
-          can receive error messages
-        -->
-        <client>private.{{ inventory_hostname }}</client>
-        <client>public.{{ inventory_hostname }}</client>
-
-      </trusted_domains>
-      <transport>
-        <server>public.{{ inventory_hostname }}</server>
-        <port>5222</port>
-        <unixpath>{{ opensrf_install_prefix }}/var/sock/unix_sock</unixpath>
-        <username>router</username>
-        <password>{{ opensrf_ejabberd_public_users.router.password }}</password>
-        <resource>router</resource>
-        <connect_timeout>10</connect_timeout>
-        <max_reconnect_attempts>5</max_reconnect_attempts>
-      </transport>
-      <logfile>{{ opensrf_install_prefix }}/var/log/router-public.log</logfile>
-      <!--
-        <logfile>syslog</logfile>
-        <syslog>local2</syslog>
-      -->
-      <loglevel>2</loglevel>
-    </router>
-    <router>
-      <!-- private router -->
-      <trusted_domains>
-        <server>private.{{ inventory_hostname }}</server>
-        <!-- 
-          Only clients on the private domain can send requests to this router
-         -->
-        <client>private.{{ inventory_hostname }}</client>
-      </trusted_domains>
-      <transport>
-        <server>private.{{ inventory_hostname }}</server>
-        <port>5222</port>
-        <username>router</username>
-        <password>{{ opensrf_ejabberd_private_users.router.password }}</password>
-        <resource>router</resource>
-        <connect_timeout>10</connect_timeout>
-        <max_reconnect_attempts>5</max_reconnect_attempts>
-      </transport>
-      <logfile>{{ opensrf_install_prefix }}/var/log/router-private.log</logfile>
-      <!--
-        <logfile>syslog</logfile>
-        <syslog>local2</syslog>
-      -->
-      <loglevel>2</loglevel>
-    </router>
-  </routers>
   <!-- ======================================================================================== -->
 
-  <!-- Any methods which match any of these match_string node values will     
-       have their params redacted from lower-level input logging.             
-       Adjust these examples as needed. -->      
+    <routers>
+        <router> <!-- public router -->
+            <trusted_domains>
+                <!-- allow private services to register with this router 
+                     and public clients to send requests to this router. -->
+                <server>private.{{ inventory_hostname }}</server>
+                <!-- also allow private clients to send to the router so it can receive error messages -->
+                <client>private.{{ inventory_hostname }}</client>
+                <client>public.{{ inventory_hostname }}</client>
+            </trusted_domains>
+            <transport>
+                <server>public.{{ inventory_hostname }}</server>
+                <port>5222</port>
+                <unixpath>{{ opensrf_install_prefix }}/var/sock/unix_sock</unixpath>
+                <username>router</username>
+                <password>{{ opensrf_ejabberd_public_users.router.password }}</password>
+                <resource>router</resource>
+                <connect_timeout>10</connect_timeout>
+                <max_reconnect_attempts>5</max_reconnect_attempts>
+            </transport>
+            <logfile>{{ opensrf_install_prefix }}/var/log/router.log</logfile>
+            <!--
+            <logfile>syslog</logfile>
+            <syslog>local2</syslog>
+            -->
+            <!--
+            <logtag>instance1</logtag>
+            -->
+            <loglevel>2</loglevel>
+        </router>
+        <router> <!-- private router -->
+            <trusted_domains>
+                <server>private.{{ inventory_hostname }}</server>
+                <!-- only clients on the private domain can send requests to this router -->
+                <client>private.{{ inventory_hostname }}</client>
+            </trusted_domains>
+            <transport>
+                <server>private.{{ inventory_hostname }}</server>
+                <port>5222</port>
+                <username>router</username>
+                <password>{{ opensrf_ejabberd_private_users.router.password }}</password>
+                <resource>router</resource>
+                <connect_timeout>10</connect_timeout>
+                <max_reconnect_attempts>5</max_reconnect_attempts>
+            </transport>
+            <logfile>{{ opensrf_install_prefix }}/var/log/router.log</logfile>
+            <!--
+            <logfile>syslog</logfile>
+            <syslog>local2</syslog>
+            -->
+            <!--
+            <logtag>instance1</logtag>
+            -->
+            <loglevel>4</loglevel>
+        </router>
+    </routers>
+
+  <!-- ======================================================================================== -->
+
   <shared>
+    <!-- Any methods which match any of these match_string node values will
+         have their params redacted from lower-level input logging.
+         Adjust these examples as needed. -->
     <log_protect>
-      <match_string>open-ils.auth.authenticate.verify</match_string>
-      <match_string>open-ils.auth.authenticate.complete</match_string>
-      <match_string>open-ils.auth.login</match_string>
-      <match_string>open-ils.auth_proxy.login</match_string>
-      <match_string>open-ils.actor.patron.password_reset.commit</match_string>
-      <match_string>open-ils.actor.user.password</match_string>
-      <match_string>open-ils.actor.user.username</match_string>
-      <match_string>open-ils.actor.user.email</match_string>
-      <match_string>open-ils.actor.patron.update</match_string>
-      <match_string>open-ils.cstore.direct.actor.user.create</match_string>
-      <match_string>open-ils.cstore.direct.actor.user.update</match_string>
-      <match_string>open-ils.cstore.direct.actor.user.delete</match_string>
-      <match_string>open-ils.search.z3950.apply_credentials</match_string>
+    <!--
+      <match_string>open-ils.auth</match_string>
+      <match_string>open-ils.some_service.some_method</match_string>
+    -->
     </log_protect>
   </shared>
+
 </config>
